typescript/checker/tests/conformance/es6/Symbols/symbolType4.ts.stderr
error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            48,
        ),
        hi: BytePos(
            49,
        ),
        ctxt: #0,
    },
    op: "++",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType4.ts:3:1
  |
3 | s++;
  | ^

error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            54,
        ),
        hi: BytePos(
            55,
        ),
        ctxt: #0,
    },
    op: "--",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType4.ts:4:1
  |
4 | s--;
  | ^

